--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,11 @@ div ul li:hover {
 
 }
 
+.wapper img{
+    border-radius: 10px;
+    margin-left: 20px;
+}
+
 .logot-nan {
     position: relative;
     display: inline-block;
@@ -263,17 +268,7 @@ input:checked + .slider:before {
     background-size: cover;
 }
 
-.logot-nan {
-    background: #1d0b4d;
-}
-
-.wapper .tel {
-    background: rgb(255,255,255);
-background: linear-gradient(0deg, rgba(255,255,255,0.577468487394958) 0%, rgba(69,16,112,1) 12%, rgba(69,16,112,1) 90%, rgba(255,255,255,0.5550595238095238) 100%);
-}
-
-
-.conteiner {
+/*.conteiner {
     width: 950px;
     height: 600px ;
     background-image: url(https://sdelanounas.ru/i/c/3/v/c3VuMS05OC51c2VyYXBpLmNvbS9pbXBnL1hsQjB3ZGpDeUFvOWMxN3A5VkMza0tjamt4TDU2Uk9qWTR2OEhRL014Y0pnZXFJYzBJLmpwZz9fX2lkPTE0ODA2NCZzaXplPTEyODB4ODUzJnF1YWxpdHk9OTUmc2lnbj0wNzhlYzE5ZGI1MWZmYWM1OWRhYzcxNjJmYmRhZGZjNCZ0eXBlPWFsYnVt.jpg);
@@ -381,4 +376,99 @@ button:hover {
 
 .next:hover {
     transform: translateX(10px);
+}*/
+
+.aktiv img{
+    width: 9999999999999999px;
+    height: 50px;
 }
+
+.aktivnosti{
+    background: #b0c5df
+}
+
+.aktiv{
+    background: rgb(34, 25, 133);
+    background: linear-gradient(90deg, rgb(45, 37, 131) 0%, rgb(88, 107, 209) 46%, rgb(37, 34, 136) 100%);
+}
+
+.aktivnosti h1{
+    color: #1d0b4d;
+}
+
+.aktivnosti p{
+    color: #1d0b4d;
+}
+
+.aktivnosti img{
+    border-radius: 100%;
+}
+
+.knopka{
+    background: rgb(34, 25, 133);
+    background: linear-gradient(90deg, rgb(45, 37, 131) 0%, rgb(88, 107, 209) 46%, rgb(37, 34, 136) 100%);
+}
+
+.knopka button{
+    background: #ddecff;
+    color: #1d0b4d;
+    border-radius: 10px;
+    border: none;
+    padding: 20px 150px;
+    margin-left: 450px;
+    font-size: large;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.histori{
+    background: rgb(34, 25, 133);
+    background: linear-gradient(90deg, rgb(45, 37, 131) 0%, rgb(88, 107, 209) 46%, rgb(37, 34, 136) 100%);
+}
+
+.histori-oke{
+    background: #b0c5df;
+    color: #1d0b4d;
+    border-radius: 5px;
+}
+
+.histori-oke h1{
+    color: #0e0529;
+    width: 30%;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+
+.histori-oke h3{
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+.histori img{
+    width: 10px;
+    height: 10px;
+}
+
+.histori button{
+    background: #1b4dcc;
+    color: #eae3fc;
+    border-radius: 10px;
+    border: none;
+    padding: 20px 150px;
+    margin-left: 450px;
+    font-size: large;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+
+.main_page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.school_photo {
+    width: 80%;
+}
+
