--- a/css/main.css
+++ b/css/main.css
@@ -472,3 +472,196 @@ button:hover {
     width: 80%;
 }
 
+#slider {
+    position: relative;
+    text-align: center;
+    top: 10px;
+}
+
+#slider{
+    margin:0 auto;
+}
+
+#slider article{
+    width: 20%;
+    float: left;
+}
+
+#slider .image{
+    width: 50%;
+    line-height: 0;
+}
+
+#owerflow{
+    width: 100%;
+    overflow: hidden;
+}
+
+article img{
+    width: 100%;
+}
+
+#desktop:checked ~ #slider{
+    max-width: 960px;
+}
+
+#switch1 :checked ~ #controls label:nth-child(5),
+#switch2 :checked ~ #controls label:nth-child(1),
+#switch3 :checked ~ #controls label:nth-child(2),
+#switch4 :checked ~ #controls label:nth-child(3),
+#switch5 :checked ~ #controls label:nth-child(4){
+    background: url('l.jpg') no-repeat;
+    float: left;
+    margin: 0 0 0 -84px;
+    display: block;
+    height: 68px;
+    width: 68px;
+}
+
+#switch1 :checked ~ #controls label:nth-child(2),
+#switch2 :checked ~ #controls label:nth-child(3),
+#switch3 :checked ~ #controls label:nth-child(4),
+#switch4 :checked ~ #controls label:nth-child(5),
+#switch5 :checked ~ #controls label:nth-child(1){
+    background: url('p.jpg') no-repeat;
+    float: right;
+    margin: 0 -84px 0 0;
+    display: block;
+    height: 68px;
+    width: 68px;
+}
+
+label, a {
+    cursor: pointer;
+}
+
+.all input{
+    display: none;
+}
+
+#switch1:checked ~ #slides .image{
+    margin-left: 0;
+}
+
+#switch2:checked ~ #slides .image{
+    margin-left: -100%;
+}
+
+#switch3:checked ~ #slides .image{
+    margin-left: -200%;
+}
+
+#switch4:checked ~ #slides .image{
+    margin-left: -300%;
+}
+
+#switch5:checked ~ #slides .image{
+    margin-left: -400%;
+}
+
+#controls{
+    margin: -25% 0 0 0;
+    width: 100%;
+    height: 50px;
+}
+
+#active label{
+    border-radius: 10px;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    background: #bbb;
+}
+
+#active{
+    margin:23% 0 0;
+    text-align: center
+}
+
+#active label:hover{
+    background: #c70e0e;
+    border-color: #f0de3b !important;
+}
+
+#switch1:checked ~ #active label :nth-child(1),
+#switch2:checked ~ #active label :nth-child(2),
+#switch3:checked ~ #active label :nth-child(3),
+#switch4:checked ~ #active label :nth-child(4),
+#switch5:checked ~ #active label :nth-child(5){
+    background: #1b4dcc;
+    border-color: #ddecff !important;
+}
+
+#slides .image{
+    transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+}
+
+#controls label:hover{
+    opacity: 0.6;
+}
+
+#controls label{
+    transition: opacity 0.2s ease-out;
+}
+
+.mesto {
+    background: rgb(34, 25, 133);
+    background: linear-gradient(90deg, rgb(45, 37, 131) 0%, rgb(88, 107, 209) 46%, rgb(37, 34, 136) 100%);
+}
+
+.mesto img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    margin-left: 80px;
+}
+
+.mesto button{
+    border-radius: 20px;
+    border: none;
+    color: #0e0529;
+    background: #b0c5df;
+    margin-top: 20px;
+    margin-bottom: 25px;
+    align-items: center;
+}
+
+/*попытка исправить это ничтожество*/
+.logo p {
+    color: #c70e0e;
+}
+
+.logo{
+    background: #cadaee;
+    border-radius: 10px;
+} /*должно обводить только текст, без пустой области*/
+
+.game-container{
+    color: #b0c5df;
+    background: #200376;
+}/*отчаяные попытки закончились*/
+
+.okeoke{
+    background: rgb(34, 25, 133);
+    background: linear-gradient(90deg, rgb(45, 37, 131) 0%, rgb(88, 107, 209) 46%, rgb(37, 34, 136) 100%);
+}
+
+.pon{
+    background: #5d86ef;
+    margin-left: 20px;
+    border-radius: 10px;
+}
+
+.pon h1{
+    text-align: center;
+}
+
+.pon p{
+    text-align: center;
+    margin-right: 7px;
+}
+input{
+    color: #0e0529;
+    border-radius: 10px;
+}
