--- a/css4/main_4.css
+++ b/css4/main_4.css
@@ -62,3 +62,24 @@ img {
     width: 100%;
     height: 100%;
 }
+
+footer{
+    background:  #07300b;
+}
+footer img{
+    width: 30px;
+    height: 30px;
+    padding: 20px 10px;
+    border-radius: 10px;
+}
+
+footer p{
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-bottom: 10px;
+}
+
+footer h5{
+    margin-top: 20px;
+    color: #07300b;
+}
