--- a/teach.css
+++ b/teach.css
@@ -158,6 +158,7 @@ div ul li:hover {
     gap: 16px;
     padding: 0px 100px;
     margin-bottom: 60px;
+    margin-top: 20px;
 }
    
   .card {
@@ -167,7 +168,7 @@ div ul li:hover {
     border-radius: 8px;
     overflow: hidden;
     padding: 10px;
-    margin-top: 5px;
+    margin-top: 20px;
 }
    
   .card img {
@@ -180,11 +181,11 @@ div ul li:hover {
   .card h3 {
     margin-top: 16px;
     margin-bottom: 8px;
-    color: #ca1212;
+    color: #e01111;
 }
    
   .card p {
-    color: #5235a3;
+    color: #523dc7;
     margin-bottom: 5px;
 }
 
@@ -207,4 +208,31 @@ footer p{
 footer h5{
     margin-top: 20px;
     color: #0e0529;
+}
+
+.govno h3 span{
+    color: #e60f08;
+    background: #e0e7f1;
+    border-radius: 15px;
+    padding: 5px;
+    margin-left: 50px;
+}
+
+.govno img{
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-left: 60px;
+    margin-bottom: 9px;
+}
+
+.content {
+    background: #4427af ;
+}
+
+.card button {
+    border: none;
+}
+
+.card button a{
+    color: #3c1b97;
 }
