--- a/exams.css
+++ b/exams.css
@@ -19,16 +19,20 @@ footer h5{
     color: #0e0529;
 }
 
-.wapper{
-    background: #bacfdf;
+.content ul {
+    list-style: none;
+    padding: 0; 
+    margin: 0; 
+    display: flex; 
+}
+.content ul li {
+    margin-right: 10px; 
 }
 
-header{
-    background: #70a8d3;
-}
-
-.content{
-    display: flex;
-    flex-direction: row;
+.content ul li a p{
+    font-size: 3px;
+    padding: 3px 3px;
+    margin-top: -40px;
+    margin-left: 100px;
 }
 
