--- a/css228/telefon.css
+++ b/css228/telefon.css
@@ -18,3 +18,25 @@ footer h5{
     margin-top: 20px;
     color: #0e0529;
 }
+
+.logo img{
+    width: 300px;
+    height: 200px;
+    margin-top: -80px;
+    margin-left: 60px;
+}
+
+.logo h1{
+    margin-left: 20px;
+}
+
+.info{
+    background: #8b8fd6;
+    border-radius: 10px;
+}
+
+.i{
+    background: #8b8fd6;
+    border-radius: 10px;
+}
+
