--- a/css228/exams.css
+++ b/css228/exams.css
@@ -60,3 +60,28 @@ footer h5{
 .wapper button p{
     text-align: center;
 }
+
+.opis h1{
+    text-align: center;
+}
+
+.opis img{
+    border-radius: 20px;
+    margin-left: 900px;
+    margin-top: -220px;
+    margin-bottom: 100px;
+}
+
+.opis p{
+    margin-left: 200px;
+    margin-top: 70px;
+}
+
+.info h1{
+   text-align: center;
+   margin-bottom: 15px;
+}
+
+.info p{
+    text-align: center;
+}
